# repharsely

./: .gitignore  README.md  pyproject.toml  slack_rephrasely_manifest.yml
repharsely/src/: ollama_llm_grammar_translator.py  settings_slack.py  webhook.py
rephrasely/src/: app.py  grok_llm_rephrasely.py  ollama_llm_rephrasely.py  os_env.py  send.py  set_env_os.py  test.py  webhook.py
test/: test_promt_ia.py
