[project]
name = "rephrasely"
version = "0.1.0"
description = "This is a Slack app that helps improve grammar, spelling, and translate messages."
authors = [
    {name = "Denis Gimenez",email = "denisbueltan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "slack-sdk (>=3.35.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
